--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,6 +77,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="punchhit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="go forward backward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="go forward backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="go right left",Scale=1.000000,Key=D)
