--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,8 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="punchhit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="go run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="echape",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="echape",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="go forward backward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="go forward backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="go right left",Scale=1.000000,Key=D)
